@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha15 (14 Jul 2007)
+
+  14 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +sun-jdk-1.7.0.0_alpha15.ebuild:
+  Version bump.
+
   12 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
   -sun-jdk-1.6.0.02_alpha02.ebuild:
   No need for 1.6u2 alphas as the real thing is out.
@@ -14,6 +20,8 @@
   23 Jun 2007; Petteri Räty <betelgeuse@gentoo.org>
   sun-jdk-1.7.0.0_alpha14.ebuild:
   Fix RDEPEND and cleanup ebuild.
+
+*sun-jdk-1.7.0.0_alpha14 (22 Jun 2007)
 
   22 Jun 2007; Vlastimil Babka <caster@gentoo.org>
   +sun-jdk-1.7.0.0_alpha14.ebuild:
